fix: reduce max width to better fit on mobile

--- a/style.css
+++ b/style.css
@@ -54,12 +54,35 @@ body {
     margin: 0 auto;
   }
 
-  @media (max-width: 600px) {
+  @media (max-width: 800px) {
     body {
-      padding: 0 1em;
+      padding: 0 0.5em;
     }
+  
     main {
-      padding: 2em 0.5em;
+      padding: 1em 0.5em;
+      max-width: 100vw;
+    }
+  
+    .section-grid {
+      grid-template-columns: 1fr;
+      gap: 2em;
+    }
+  }
+  
+  @media (max-width: 500px) {
+    h1 {
+      font-size: 1.3rem;
+    }
+  
+    #search {
+      width: 100%;
+      font-size: 1em;
+      padding: 0.6em;
+    }
+  
+    section h2 {
+      font-size: 1rem;
     }
   }
   
